# predictably

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-issue.md
.github/workflows/: codeql.yml  dependabot.yml  dependency-review.yml  release.yml  test.yml  wheels.yml
build_tools/: fail_on_missing_init_files.sh
docs/source/: about.rst  api_reference.rst  conf.py  contribute.rst  get_started.rst  index.rst  users.rst
docs/source/_static/: switcher.json
docs/source/about/: governance.rst  history.rst  mission.rst  roadmap.rst  team.rst
docs/source/contribute/: code_of_conduct.rst  development.rst  how_to_contribute.rst
docs/source/contribute/development/: developer_guide.rst  reviewer_guide.rst
docs/source/contribute/development/developer_guide/: ci.rst  coding_standards.rst  creating_docs.rst  dependencies.rst  dev_installation.rst  enhancement_proposal.rst  git_workflow.rst  release_instructions.rst  testing_framework.rst
docs/source/user_documentation/: changelog.rst  glossary.rst  installation.rst  related_software.rst  tutorials.rst  user_guide.rst
docs/source/user_documentation/user_guide/: configuration.rst  overview.rst
predictably/: __init__.py  _base.py  _config.py  _config_param_setting.py  _exceptions.py
predictably/_core/: __init__.py  _base.py  _exceptions.py
predictably/_core/_pprint/: __init__.py  _object_html_repr.py  _pprint.py
predictably/_core/tests/: __init__.py  test_base.py  test_baseestimator.py  test_config.py  test_exceptions.py  test_timeseries.py
predictably/data/: __init__.py
predictably/data/types/: __init__.py  _base.py  _cross_section.py  _from_external.py  _panel.py  _timeseries.py  _types.py
predictably/data/types/tests/: __init__.py  test_base_types.py
predictably/tests/: __init__.py  conftest.py  test_baseestimator.py  test_config.py  test_exceptions.py  test_timeseries.py
predictably/utils/: __init__.py  _iter.py
predictably/utils/tests/: __init__.py  test_iter.py
predictably/validate/: __init__.py  _named_objects.py  _types.py
predictably/validate/tests/: __init__.py  test_iterable_named_objects.py  test_type_validations.py
