[metadata]
description_file = README.md
long_description_content_type = text/markdown

[bdist_wheel]
universal = false

[sdist]
formats = gztar

[flake8]
# inline with Black code formatter
max-line-length = 88
inline-quotes = double
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
extend-ignore = E203
extend-select = B904, B907
exclude = .git, __pycache__, docs/source/conf.py, build, dist
require-plugins =
    flake8-bugbear,
    flake8-builtins,
    flake8-quotes,
    flake8-bandit,
    flake8-pydocstyle,
    flake8-comprehensions,
    pandas-vet,
    flake8-print,
    pep8-naming

[mypy]
ignore_missing_imports = True
